Added source to notebook.

--- a/report1.ipynb
+++ b/report1.ipynb
@@ -26,7 +26,8 @@
     "import pandas\n",
     "import numpy as np\n",
     "import pandas_access\n",
-    "DATASET = \"./FDOC_January_2017.mdb\""
+    "DATASET = \"./FDOC_January_2017.mdb\" # From http://www.dc.state.fl.us/pub/obis_request.html \n",
+    "                                    # ~1.3 gb; publicly available data."
    ]
   },
   {
